# skald-python

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/rules/: feature-files.md
core/: views.py
core/templates/: base.html
core/templates/components/: home_nav.html  theme_switcher.html
core/templates/core/: home.html
docs/domains/: _overview.md
docs/plans/: django-project-setup.md  docker-compose-setup.md  domain-knowledge-hierarchy.md  implement-daisyui.md  pytest-bdd-setup.md  ruff-setup.md  user-access-models.md  user-login-home.md
docs/strategy/: backlog.md  tech-stack.md  vision.md
docs/strategy/architecture/: 001-django-framework.md
knowledge/: admin.py  mixins.py  models.py  urls.py  views.py
knowledge/migrations/: 0001_initial.py
knowledge/templates/knowledge/: base.html  capability_confirm_delete.html  capability_form.html  capability_list.html  domain_confirm_delete.html  (+5 more)
skald_project/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: input.css  output.css
tests/domain_knowledge/: conftest.py  test_capability_management.py  test_domain_management.py  test_subdomain_management.py
tests/steps/: test_health_check.py
tests/user_access/: conftest.py  test_authorization.py  test_home_page.py  test_product_management.py  test_role_assignment.py  test_user_login.py  test_user_management.py
users/: admin.py  models.py  urls.py
users/migrations/: 0001_initial.py
(+62 files in other folders)
